--- a/WebApplication1/Areas/coadmin/Views/documentos/agregarCategoria.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/documentos/agregarCategoria.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "categoria";
-    Page.Title = "Categorías - Brokolee Software";
+    Page.Title = "Agregar categoría - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -20,7 +20,8 @@
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
                             <li class="breadcrumb-item"><a href="@Url.Action("listado", "documentos", new { area = "coadmin" })" class="text-success"> Documentos</a></li>
-                            <li class="breadcrumb-item active">Categorías</li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listadoCategoria", "documentos", new { area = "coadmin" })" class="text-success"> Categorías</a></li>
+                            <li class="breadcrumb-item active">Agregar categoría</li>
                         </ul>
                     </div>
                 </div>
@@ -30,15 +31,26 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="@Url.Action("listado", "documentos", new { area = "coadmin" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("listadoCategoria", "documentos", new { area = "coadmin" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
 
         <div class="row">
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="col-12">
                 <div class="card">
-                    @using (Html.BeginForm("createdocumenttype", "documentos", FormMethod.Post, 
+                    @using (Html.BeginForm("createdocumenttype", "documentos", FormMethod.Post,
                         new { id = "createdocumenttypeForm", @class = "", area = "coadmin" }))
                     {
                         @Html.AntiForgeryToken()
@@ -48,7 +60,7 @@
                         <div class="form-group row">
                             <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
                             <div class="col-sm-9">
-                                <input  maxlength="20" class="form-control soloTexto" type="text" value="" name="type_name" required
+                                <input maxlength="20" class="form-control soloTexto" type="text" value="" name="type_name" required
                                        data-toggle="tooltip" title="Nombre de la categoría"
                                        placeholder="Nombre" id="example-email-input">
                                 <small class="form-text text-muted">Nombre de la categoría</small>
@@ -76,68 +88,16 @@
                         </div>
                         <div class="form-divider"></div>
                         <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
-</div>
+                        <a href="@Url.Action("listadoCategoria", "documentos", new { area = "coadmin" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
+                    </div>
                     }
                 </div>
             </div>
-        </div><!-- end row -->
-
-        <div class="row">
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="row form-material">
-                            <div class="col-md-6">
-                                <h5 class="d-inline-block">Listado de categorías</h5>
-                            </div>
-                            <div class="col-md-6 mb-1">
-
-                            </div>
-                        </div>
-                        <div class="table-responsive">
-                            <table id="dataTable-documentos-legales" class="table table-striped table-bordered normal" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
-                                <thead>
-                                    <tr>
-                                        <th>Categoría</th>
-                                        <th>Documentos</th>
-                                        <th>Nivel de acceso</th>
-                                        <th class="text-center">Opciones</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @foreach (var item in Model.documentTypeItemList)
-                                    {
-                                    <tr>
-                                        <td>@item.DocumentTypeName</td>
-                                        <td class="text-center">
-                                        <a href="@Url.Action("listado", "documentos", new { area = "coadmin", idCategory = item.ID })">
-                                            <button type="button" class="btn btn-info waves-effect waves-light btn-sm">@item.Documents</button>
-                                             </a></td>
-                                        <td class="text-center">
-                                            @if (item.Share == 1)
-                                            {
-                                            <button type="button" class="btn btn-warning waves-effect waves-light btn-sm mb-1">General</button>
-                                            }
-                                            else
-                                            {
-                                                <button type="button" class="btn btn-info waves-effect waves-light btn-sm mr-1 mb-1">Administradores</button>
-                                            }
-                                        </td>
-                                        <td class="text-center"><a href="@Url.Action("editarcategoria", "documentos", new { area = "coadmin", typeID = item.ID })"><button type="button" class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1" data-toggle="tooltip" data-placement="top" title="Editar"><i class="mdi mdi-lead-pencil"></i></button></a><a href="#"><button type="button" onclick="onDeleteDocumentType(this)" data-id="@item.ID" class="btn btn-danger waves-effect waves-light btn-sm mb-1" data-toggle="tooltip" data-placement="top" title="Eliminar"><i class="mdi mdi-delete"></i></button></a></td>
-                                    </tr>
-                                    }
-                                </tbody>
-                            </table>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div><!-- end row -->
+        </div><!-- end row -->       
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="@Url.Action("listado", "documentos", new { area = "coadmin" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("listadoCategoria", "documentos", new { area = "coadmin" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
