--- a/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
@@ -588,13 +588,13 @@
                                                             if (Model.side_sub_menu == "documentos_categoria")
                                                             {
                                                                 <li class="active">
-                                                                    <a href="@Url.Action("categoria", "documentos", new { area = "coadmin" })" class="active">Categorías</a>
+                                                                    <a href="@Url.Action("listadoCategoria", "documentos", new { area = "coadmin" })" class="active">Categorías</a>
                                                                 </li>
                                                             }
                                                             else
                                                             {
                                                                 <li>
-                                                                    <a href="@Url.Action("categoria", "documentos", new { area = "coadmin" })">Categorías</a>
+                                                                    <a href="@Url.Action("listadoCategoria", "documentos", new { area = "coadmin" })">Categorías</a>
                                                                 </li>
                                                             }
 
