--- a/WebApplication1/Views/control/community.cshtml
+++ b/WebApplication1/Views/control/community.cshtml
@@ -84,7 +84,7 @@
                                         <td class="text-center">
                                             <a href="@Url.Action("listadoTitulos", "control", new { Id = item.id })"
                                                class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
-                                               data-toggle="tooltip" data-placement="top" title="Comunidades">
+                                               data-toggle="tooltip" data-placement="top" title="Propiedades">
                                                 <i class="mdi mdi-home"></i>
                                             </a>                                           
                                         </td>
