--- a/WebApplication1/Areas/webmaster/Views/titulares/listado.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/listado.cshtml
@@ -228,7 +228,7 @@
                                                 </a>
                                                 <a href="@Url.Action("listadoTitulos", "titulares", new { area = "webmaster", id = item.id })"
                                                    class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
-                                                   data-toggle="tooltip" data-placement="top" title="Comunidades">
+                                                   data-toggle="tooltip" data-placement="top" title="Propiedades">
                                                     <i class="mdi mdi-home"></i>
                                                 </a>
                                                 <a href="#">
